--- a/src/index.scss
+++ b/src/index.scss
@@ -3,23 +3,26 @@ body {
   font-family: "Roboto", sans-serif;
   height: 100vh;
   width: 100%;
+  overflow-x: hidden;
+  padding-bottom: 5rem;
 
-  overflow: hidden;
 }
 
 main {
   width: 100%;
   height: 100vh;
-
   display: flex;
-  align-items: center;
   justify-content: center;
+  margin: 5vh 0;
 
   section.todolist {
+    position: absolute;
+    top: 5rem;
     background-color: rgba(255, 250, 255, 0.685);
     padding: 2rem;
     border-radius: 5px;
     width: 40%;
+    // height: 100%;
 
     .todolist-header {
       .todolist-title {
@@ -45,6 +48,17 @@ main {
           cursor: pointer;
           border-radius: 5px;
         }
+      }
+    }
+
+    .todolist-search {
+      margin-top: 10px;
+      h2{
+        padding: 0 10px;
+      }
+      input[type=text]{
+        width: 95%;
+        padding: 10px 5px;
       }
     }
 
